docs: fix progress bar and spinner spacing (#6873)

--- a/www/src/css/examples.scss
+++ b/www/src/css/examples.scss
@@ -5,7 +5,10 @@
   }
 
   > .btn,
-  > .btn-group {
+  > .btn-group,
+  > .spinner-border,
+  > .spinner-grow,
+  .progress {
     margin: 0.25rem 0.25rem;
   }
 
